new file created and web page title changed to husnain's project

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row v-center">
                 <div class="col-xs-12 col-md-7 header-text">
-                    <h2>It’s all about Promoting your Business</h2>
+                    <h2>This is husnain's sample project.</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero ex inventore vel error quibusdam animi fugiat, doloribus dolores consectetur nulla deleniti sint blanditiis quod debitis quis vitae officiis tempora numquam.</p>
                     <a href="#" class="button white">Watch video</a>
                 </div>
